# repo---video

./: .env.example  .gitignore  Dockerfile.serve  README.md  pyproject.toml  repovideo_colab.ipynb
src/: analyzer.py  cli.py  compositor.py  config.py  remote.py  sandbox.py  serve.py
src/anecdote/: datasets.py  image_gen.py  lora_inference_utils.py  lora_trainer.py  prompts.py  video_gen.py
src/recorder/: browser_recorder.py  script_generator.py  terminal_recorder.py
templates/dockerfiles/: go.Dockerfile  python.Dockerfile  rust.Dockerfile
tests/: conftest.py  test_analyzer.py  test_compositor.py  test_let_them_hit_demo.py  test_lora_inference_utils.py  test_pipeline_integration.py  test_prompts.py  test_script_generator.py  test_youtube_commons_dataset.py
